# fluor

./: AGENT.md  Cargo.toml  README.md  build-development.sh
.cargo/: config.toml
examples/: bench_composite.rs  panes.rs
examples/assets/: example_orb.vsf
src/: canvas.rs  coord.rs  event.rs  geom.rs  group.rs  host.rs  layer.rs  lib.rs  math.rs  paint.rs  pane.rs  par.rs  pixel.rs  region.rs  rpn.rs  simd.rs  stack.rs  text.rs  theme.rs  widgets.rs
src/host/: app.rs  chrome.rs  chrome_widget.rs  desktop.rs  event_response.rs  icon.rs  macos_hittest.rs  os_input.rs  pointer.rs  renderer_wgpu.rs  vsf_rgb.icc  wake.rs  widget.rs  window_handle.rs  windows_layered.rs  winit_compat.rs
src/host/android/: events.rs  mod.rs  shell.rs  surface.rs  window.rs
src/paint/: finalize.rs  glow.rs  shadow.rs  shape.rs  squircle.rs
src/widgets/: blink.rs  button.rs  dropdown.rs  slider.rs  textbox.rs
tests/: toka_spike.rs
