[package]
name = "fluor"
version = "0.0.0"
edition = "2024"
authors = ["Nick Spiker <fractaldecoder@proton.me>"]
license = "MIT OR Apache-2.0"
description = "First-principles GUI compositor library: center-origin RU coordinates, harmonic-mean span scaling, CPU softbuffer rendering, ARM-first."
repository = "https://github.com/nickspiker/fluor"
homepage = "https://github.com/nickspiker/fluor"
documentation = "https://docs.rs/fluor"
readme = "README.md"
keywords = ["gui", "compositor", "windowing", "graphics", "ui"]
categories = ["gui", "graphics", "rendering"]

[lib]
crate-type = ["rlib"]

[features]
# host-bare is the no_std path used by ferros and other bare-metal consumers.
# host-winit / host-softbuffer / text imply std.
default = ["std", "host-winit", "simd"]
std = []
# host-winit transitively requires text — desktop chrome wants real glyphs out of the box.
# macOS uses wgpu/Metal for PostMultiplied alpha (transparent squircle corners);
# Linux/Windows use softbuffer (CPU blit, no GPU dependency).
host-winit = ["std", "text", "dep:winit", "dep:softbuffer", "dep:wgpu", "dep:pollster", "dep:arboard"]
host-softbuffer = ["std", "dep:softbuffer"]
host-bare = []
text = ["std", "dep:cosmic-text", "dep:swash"]
simd = []

[dependencies]
# spirix is kept as an opt-in dep for precision-critical rasterizer paths and a future
# `spirix-coord` feature; layout types default to f32 so f32-native consumers (photon,
# rhe, basecalc) match their pre-fluor speed. `path` is for local development; `version`
# is required for crates.io publish.
spirix = { version = "0.0.12", path = "../spirix", default-features = false, features = ["alloc"] }

# vsf decodes the canonical image format used by `host::icon` (orb / app-icon decode). Default features (std + registry) match fluor's host environment.
vsf = { version = "0.3", path = "../vsf" }

# rav1d decodes AV1 OBU bitstreams for icons over `vsfimg`'s UNCOMPRESSED_MAX_DIM. `bitdepth_8` keeps the build slim — fluor's icon path is u8 RGB only.
rav1d = { version = "1.1", default-features = false, features = ["bitdepth_8"] }

libm = "0.2"
arboard = { version = "3", optional = true }
winit = { version = "0.30", optional = true }
softbuffer = { version = "0.4", optional = true }
wgpu = { version = "28", default-features = false, features = ["metal"], optional = true }
pollster = { version = "0.4", optional = true }
cosmic-text = { version = "0.14", optional = true }
# swash is pulled in transitively by cosmic-text but we use it directly for transform-aware
# glyph rasterization (rotated/skewed text). Pinning the same version cosmic-text uses keeps
# FontRef + ScaleContext interop trivial.
swash = { version = "0.2", optional = true }

# x11rb is Linux-only. Used for two things: (1) ONE atomic XConfigureWindow with all four of (x, y, width, height) for self-driven resize drags (eliminates the visible "first-size-then-position" seam from winit's separate calls). (2) `xcb_shape_rectangles(SK_INPUT, ...)` to set the click-through input region — the fullscreen transparent surface only accepts clicks inside `window_rect`; everything else passes through to whatever's behind us. `shape` feature pulls in the XShape extension bindings.
[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["shape"] }

[dev-dependencies]
proptest = "1.5"

[profile.dev]
opt-level = 2
overflow-checks = false
debug = false
debug-assertions = false
lto = false
codegen-units = 16
incremental = true

[profile.debuggable]
inherits = "dev"
debug = "line-tables-only"

[profile.release]
opt-level = 3
overflow-checks = false
lto = true
codegen-units = 1
strip = true
panic = "abort"
