[package]
name = "fluor"
version = "0.0.2"
edition = "2024"
authors = ["Nick Spiker <fractaldecoder@proton.me>"]
license = "MIT OR Apache-2.0"
description = "First-principles GUI compositor library: center-origin RU coordinates, harmonic-mean span scaling, CPU softbuffer rendering, ARM-first."
repository = "https://github.com/nickspiker/fluor"
homepage = "https://github.com/nickspiker/fluor"
documentation = "https://docs.rs/fluor"
readme = "README.md"
keywords = ["gui", "compositor", "windowing", "graphics", "ui"]
categories = ["gui", "graphics", "rendering"]

[lib]
crate-type = ["rlib"]

[features]
# host-bare is the no_std path used by ferros and other bare-metal consumers.
# host-winit / host-softbuffer / text imply std.
#
# `host-winit` is NOT in default — it transitively pulls softbuffer + arboard, neither of which has an Android backend, so a vanilla `default-features = true` fluor dep would break the Android dep graph. Consumers (photon, examples) opt into the host explicitly per target: `features = ["host-winit"]` in the desktop block.
#
# `text` IS in default — anything visual needs `TextRenderer`. cosmic-text + swash do compile on Android; if APK size grows uncomfortably the text path can move to a feature gate later (see `host-android` plan).
default = ["std", "text", "simd", "rayon"]
std = []
# host-winit transitively requires text — desktop chrome wants real glyphs out of the box.
# macOS uses wgpu/Metal for PostMultiplied alpha (transparent squircle corners);
# Linux/Windows use softbuffer (CPU blit, no GPU dependency).
host-winit = ["std", "text", "dep:winit", "dep:softbuffer", "dep:wgpu", "dep:pollster", "dep:arboard"]
host-softbuffer = ["std", "dep:softbuffer"]
host-bare = []
text = ["std", "dep:cosmic-text", "dep:swash"]
# Portable SIMD via the `wide` crate. Widens inner loops in rasterizers / boundary passes /
# the under() kernel to 4–8 pixels per iter. Scalar fallback path is preserved for builds
# with `--no-default-features`.
simd = ["dep:wide"]
# Data-parallel outer loops via rayon. Each rasterizer's row loop and each full-buffer pass
# (finalize, flatten, Op::Under) splits across the rayon thread pool. Requires std for the
# OS thread pool — no_std builds (host-bare / ferros) stay sequential.
rayon = ["std", "dep:rayon"]

[dependencies]
# spirix is kept as an opt-in dep for precision-critical rasterizer paths and a future
# `spirix-coord` feature; layout types default to f32 so f32-native consumers (photon,
# rhe, basecalc) match their pre-fluor speed. `path` is for local development; `version`
# is required for crates.io publish.
spirix = { version = "0.0.12", path = "../spirix", default-features = false, features = ["alloc"] }

# vsf decodes the canonical image format used by `host::icon` (orb / app-icon decode). Default features (std + registry) match fluor's host environment.
vsf = { version = "0.3", path = "../vsf" }

# rav1d decodes AV1 OBU bitstreams for icons over `vsfimg`'s UNCOMPRESSED_MAX_DIM. `bitdepth_8` keeps the build slim — fluor's icon path is u8 RGB only.
rav1d = { version = "1.1", default-features = false, features = ["bitdepth_8"] }

libm = "0.2"
# Portable SIMD types (f32x4/x8, u32x4/x8, etc) with x86 SSE/AVX, ARM NEON, and WASM SIMD
# backends. Stable Rust. Gated by the `simd` feature.
wide = { version = "0.7", optional = true }
# Work-stealing thread pool for data-parallel outer loops. Gated by the `rayon` feature
# (which itself requires `std`).
rayon = { version = "1", optional = true }
arboard = { version = "3", optional = true }
winit = { version = "0.30", optional = true }
softbuffer = { version = "0.4", optional = true }
wgpu = { version = "28", default-features = false, features = ["metal"], optional = true }
pollster = { version = "0.4", optional = true }
cosmic-text = { version = "0.14", optional = true }
# swash is pulled in transitively by cosmic-text but we use it directly for transform-aware
# glyph rasterization (rotated/skewed text). Pinning the same version cosmic-text uses keeps
# FontRef + ScaleContext interop trivial.
swash = { version = "0.2", optional = true }

# x11rb is Linux-only. Used for `xcb_shape_rectangles(SK_INPUT, ...)` to set the click-through input region — the fullscreen transparent surface only accepts clicks inside `window_rect`; everything else passes through to whatever's behind us. `shape` feature pulls in the XShape extension bindings.
[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["shape"] }

[dev-dependencies]
proptest = "1.5"

[profile.dev]
opt-level = 2
overflow-checks = false
debug = false
debug-assertions = false
lto = false
codegen-units = 16
incremental = true

[profile.debuggable]
inherits = "dev"
debug = "line-tables-only"

[profile.release]
opt-level = 3
overflow-checks = false
lto = true
codegen-units = 1
strip = true
panic = "abort"
