[package]
name = "fluor"
version = "0.0.3"
edition = "2024"
authors = ["Nick Spiker <fractaldecoder@proton.me>"]
license = "MIT OR Apache-2.0"
description = "First-principles GUI compositor library: center-origin RU coordinates, harmonic-mean span scaling, CPU softbuffer rendering, ARM-first."
repository = "https://github.com/nickspiker/fluor"
homepage = "https://github.com/nickspiker/fluor"
documentation = "https://docs.rs/fluor"
readme = "README.md"
keywords = ["gui", "compositor", "windowing", "graphics", "ui"]
categories = ["gui", "graphics", "rendering"]

[lib]
crate-type = ["rlib"]

[features]
# host-bare is the no_std path used by ferros and other bare-metal consumers.
# host-winit / host-softbuffer / text imply std.
#
# `host-winit` is NOT in default — it pulls winit + softbuffer, which have no Android backend, so a vanilla `default-features = true` fluor dep would break the Android dep graph. Consumers (photon, examples) opt into the host explicitly per target: `features = ["host-winit"]` in the desktop block.
#
# `text` IS in default — anything visual needs `TextRenderer`. cosmic-text + swash do compile on Android; if APK size grows uncomfortably the text path can move to a feature gate later (see `host-android` plan).
default = ["std", "text", "simd", "rayon"]
std = []
# amber — the development-build theme: photon's debug orange (#FFA000) swapped into the theme CONSTANTS (bg noise tint, window hairlines, title text). Zero extra drawing steps, pure colour changes; photon's `development` feature enables it so a dev build is never mistaken for release.
amber = []
# host-winit transitively requires text — desktop chrome wants real glyphs out of the box.
# macOS uses wgpu/Metal for PostMultiplied alpha (transparent squircle corners);
# Linux/Windows/Redox use softbuffer (CPU blit, no GPU dependency).
# wgpu + pollster (macOS-only) and arboard (clipboard; every desktop EXCEPT Redox, which has no arboard backend) are NOT in this set — they're pulled by the per-target dependency blocks below so a host-winit build for Redox (winit's Orbital backend + softbuffer, both of which support Redox) doesn't drag in deps that won't compile there. The non-macOS softbuffer present path in host/app.rs is `cfg(not(target_os = "macos"))`, so it already covers Redox with zero source changes.
host-winit = ["std", "text", "icon", "dep:winit", "dep:softbuffer"]
host-softbuffer = ["std", "icon", "dep:softbuffer"]
host-bare = []
# App-icon decode (host::icon + the chrome that draws the orb). Pulls vsf + rav1d — rav1d cannot
# build for wasm32, so headless consumers (toka's browser renderer) leave this off. Implied by
# every real host feature; only paint/text/canvas consumers skip it.
icon = ["dep:rav1d", "dep:vsf"]
# Android backend — ANativeWindow surface + JNI entry points + Choreographer-driven render scheduling. Enabled by the consumer's Android target block (e.g. photon's `[target.'cfg(target_os = "android")'.dependencies]`). text stays required because the chrome paints title glyphs; ndk + ndk-sys + jni + log are the NDK bindings the surface and JNI shims wrap.
#
# winit is intentionally NOT in this feature set — `FluorApp::set_event_proxy` takes a fluor-native `Arc<dyn WakeSender<Self::UserEvent>>` so the trait shape is platform-uniform without dragging winit's data types onto Android. Eliminates the `android-activity` compile-glue dep + the `android_main` linker shim that came along when winit was present on Android.
host-android = ["std", "text", "icon", "dep:ndk", "dep:ndk-sys", "dep:jni", "dep:log", "dep:libc"]
text = ["std", "dep:cosmic-text", "dep:swash"]
# Portable SIMD via the `wide` crate. Widens inner loops in rasterizers / boundary passes /
# the under() kernel to 4–8 pixels per iter. Scalar fallback path is preserved for builds
# with `--no-default-features`.
simd = ["dep:wide"]
# Data-parallel outer loops via rayon. Each rasterizer's row loop and each full-buffer pass
# (finalize, flatten, Op::Under) splits across the rayon thread pool. Requires std for the
# OS thread pool — no_std builds (host-bare / ferros) stay sequential.
rayon = ["std", "dep:rayon"]

[dependencies]
# spirix is kept as an opt-in dep for precision-critical rasterizer paths and a future
# `spirix-coord` feature; layout types default to f32 so f32-native consumers (photon,
# rhe, basecalc) match their pre-fluor speed. `path` is for local development; `version`
# is required for crates.io publish.
spirix = { version = "0.1.1", path = "../spirix", default-features = false, features = ["alloc"] }

# vsf decodes the canonical image format used by `host::icon` (orb / app-icon decode). Default features (std + registry) match fluor's host environment. Optional behind `icon` — headless consumers (toka's wasm renderer) don't decode app icons, and rav1d can't build for wasm32.
vsf = { version = "0.9.2", path = "../vsf", optional = true }

# rav1d decodes AV1 OBU bitstreams for icons over `vsfimg`'s UNCOMPRESSED_MAX_DIM. `bitdepth_8` keeps the build slim — fluor's icon path is u8 RGB only. Optional behind `icon` (see vsf note).
rav1d = { version = "1.1", default-features = false, features = ["bitdepth_8"], optional = true }

libm = "0.2"
# Portable SIMD types (f32x4/x8, u32x4/x8, etc) with x86 SSE/AVX, ARM NEON, and WASM SIMD
# backends. Stable Rust. Gated by the `simd` feature.
wide = { version = "0.7", optional = true }
# Work-stealing thread pool for data-parallel outer loops. Gated by the `rayon` feature
# (which itself requires `std`).
rayon = { version = "1", optional = true }
# winit + softbuffer are cross-platform (incl. Redox/Orbital), so they stay top-level under the host-winit feature. wgpu + pollster (macOS GPU present) and arboard (clipboard, non-Redox) are declared in the per-target blocks below instead — keeps them off the Redox dep graph.
winit = { version = "0.30", optional = true }
softbuffer = { version = "0.4", optional = true }
cosmic-text = { version = "0.14", optional = true }
# swash is pulled in transitively by cosmic-text but we use it directly for transform-aware
# glyph rasterization (rotated/skewed text). Pinning the same version cosmic-text uses keeps
# FontRef + ScaleContext interop trivial.
swash = { version = "0.2", optional = true }

# Android NDK bindings — surface (ANativeWindow), JNI entry points, native logging. Optional at the workspace level (gated on `host-android`) but listed unconditionally here because Cargo doesn't allow `[target.'cfg(target_os = "android")'.dependencies]` entries to mark themselves optional. The feature gate inside `host-android` brings them into the dep graph; consumers without that feature don't compile the host::android module so the deps stay unused.
ndk = { version = "0.9", features = ["api-level-26"], optional = true }
ndk-sys = { version = "0.6", optional = true }
jni = { version = "0.21", optional = true }
log = { version = "0.4", optional = true }
# libc gives us `dlsym` / `RTLD_DEFAULT` to runtime-resolve NDK symbols added after our `api-level-26` floor (e.g. `ANativeWindow_setBuffersDataSpace` which is API 28+). Without runtime resolution the .so wouldn't even load on 26-27 devices because the dynamic linker resolves all imports eagerly at dlopen time.
libc = { version = "0.2", optional = true }

# x11rb is Linux-only. Used for `xcb_shape_rectangles(SK_INPUT, ...)` to set the click-thru input region — the fullscreen transparent surface only accepts clicks inside `window_rect`; everything else passes thru to whatever's behind us. `shape` feature pulls in the XShape extension bindings.
[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["shape"] }

# Windows: the fullscreen-transparent compositor needs a LAYERED window (per-pixel alpha + automatic
# click-thru on α=0 pixels) presented via UpdateLayeredWindow — softbuffer's BitBlt present is opaque
# and can't do either, so the Windows present path bypasses it (host/app.rs gates on target_os).
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }

# objc2 + AppKit bindings for macOS click-thru: NSEvent global mouse monitor + NSWindow mouseLocationOutsideOfEventStream. wgpu/Metal + pollster live here too — the GPU present path is macOS-only (host/app.rs gates it on `cfg(target_os = "macos")`), so no other target compiles wgpu.
[target.'cfg(target_os = "macos")'.dependencies]
wgpu = { version = "28", default-features = false, features = ["metal"] }
pollster = "0.4"
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSNotification"] }
objc2-app-kit = { version = "0.3", features = ["NSEvent", "NSWindow", "NSResponder", "NSView", "NSScreen"] }
objc2-quartz-core = { version = "0.3", features = ["CAMetalLayer", "CALayer", "objc2-core-graphics"] }
objc2-core-graphics = { version = "0.3", features = ["CGColorSpace"] }
objc2-core-foundation = { version = "0.3", features = ["CFData"] }

[dev-dependencies]
proptest = "1.5"

[profile.dev]
opt-level = 2
overflow-checks = false
debug = false
debug-assertions = false
lto = false
codegen-units = 16
incremental = true

[profile.debuggable]
inherits = "dev"
debug = "line-tables-only"

[profile.release]
opt-level = 3
overflow-checks = false
lto = true
codegen-units = 1
strip = true
panic = "abort"
